--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,13 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:gravity="center"
-    android:orientation="vertical" >
+<TabHost
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_height="fill_parent"
+	android:layout_width="fill_parent"
+	android:orientation="horizontal"
+	android:id="@android:id/tabhost">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello" />
+	<LinearLayout
+		android:layout_height="fill_parent"
+		android:layout_width="fill_parent"
+		android:orientation="vertical">
 
-</LinearLayout>
+		<TabWidget
+			android:layout_height="wrap_content"
+			android:id="@android:id/tabs"
+			android:layout_width="fill_parent"/>
+
+		<FrameLayout
+			android:layout_height="fill_parent"
+			android:id="@android:id/tabcontent"
+			android:layout_width="fill_parent"/>
+
+	</LinearLayout>
+
+</TabHost>
+
