重写文件浏览控件

--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -72,15 +72,15 @@
 
 
 	</PreferenceCategory>
-	<PreferenceCategory
+	<!--<PreferenceCategory
 		android:title="作者信息">
 	
 	<Preference
 		android:title=""
 			android:key="about"
-			android:summary="软件作者：卧槽工作室\n猛戳此处加群群反馈\n爱你(^з^)">
+			android:summary="软件作者：">
 	</Preference>
-	</PreferenceCategory>
+	</PreferenceCategory>-->
 </PreferenceScreen>
 <!--
 android:key  选项的名称或键,类似id
