--- a/res/layout/filelist.xml
+++ b/res/layout/filelist.xml
@@ -4,10 +4,11 @@
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
 	android:orientation="vertical">
-
-	<ListView
+	
+	<GridView
 		android:layout_height="match_parent"
 		android:layout_width="match_parent"
+		android:numColumns="2"
 		android:id="@+id/file_list"/>
 
 </LinearLayout>
