--- a/res/layout/filelist_item.xml
+++ b/res/layout/filelist_item.xml
@@ -3,48 +3,29 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:orientation="horizontal"
-	android:gravity="left|center">
+	android:orientation="vertical"
+	android:gravity="center">
 
 	<ImageView
-		android:layout_height="50dip"
-		android:layout_width="50dip"
+		android:layout_height="100dip"
+		android:layout_width="100dip"
 		android:id="@+id/filelist_icon"
 		android:layout_margin="5dp"
 		android:scaleType="centerInside"/>
 
 	<LinearLayout
 		android:layout_height="wrap_content"
-		android:layout_width="match_parent"
-		android:orientation="vertical">
+		android:layout_width="wrap_content"
+		android:orientation="vertical"
+		android:gravity="center">
 
 		<TextView
 			android:layout_height="wrap_content"
 			android:textAppearance="?android:attr/textAppearanceMedium"
 			android:layout_width="wrap_content"
 			android:id="@+id/filelist_name"
-			android:textColor="#000000"/>
-
-		<RelativeLayout
-			android:layout_height="wrap_content"
-			android:layout_width="match_parent"
-			android:layout_marginTop="10dp">
-
-			<TextView
-				android:layout_height="wrap_content"
-				android:textAppearance="?android:attr/textAppearanceSmall"
-				android:layout_width="wrap_content"
-				android:id="@+id/filelist_date"/>
-
-			<TextView
-				android:layout_height="wrap_content"
-				android:textAppearance="?android:attr/textAppearanceSmall"
-				android:layout_width="wrap_content"
-				android:layout_alignParentRight="true"
-				android:layout_marginRight="10dp"
-				android:id="@+id/filelist_size"/>
-
-		</RelativeLayout>
+			android:textColor="#000000"
+			android:gravity="center"/>
 
 	</LinearLayout>
 
