--- a/res/layout/gifview.xml
+++ b/res/layout/gifview.xml
@@ -1,35 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<HorizontalScrollView
+<LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_height="match_parent"
 	android:layout_width="match_parent"
-	android:background="#000000">
+	android:layout_height="match_parent"
+	android:orientation="vertical"
+	android:gravity="center"
+	android:background="@drawable/tpi_background">
 
-	<ScrollView
-		android:layout_height="match_parent"
-		android:layout_width="match_parent"
-		android:background="#000000">
+	<HorizontalScrollView
+		android:layout_height="wrap_content"
+		android:layout_width="wrap_content">
 
-		<LinearLayout
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:orientation="vertical"
-			android:gravity="center"
-			android:background="#000000">
+		<ScrollView
+			android:layout_height="wrap_content"
+			android:layout_width="wrap_content">
 
-			<com.luoye.gifmaker.core.GifView
-				android:layout_height="wrap_content"
-				android:layout_width="wrap_content"
-				android:id="@+id/gifview"/>
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:orientation="vertical"
+				android:gravity="center">
 
-			<ImageView
-				android:layout_height="wrap_content"
-				android:layout_width="wrap_content"
-				android:id="@+id/iv"/>
+				<com.wocao.gifmaker.core.GifView
+					android:layout_height="wrap_content"
+					android:layout_width="wrap_content"
+					android:id="@+id/gifview"/>
 
-		</LinearLayout>
+				<ImageView
+					android:layout_height="wrap_content"
+					android:layout_width="wrap_content"
+					android:id="@+id/iv"/>
 
-	</ScrollView>
+			</LinearLayout>
 
-</HorizontalScrollView>
+		</ScrollView>
+
+	</HorizontalScrollView>
+
+</LinearLayout>
 
